--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "build-chrome": "node scripts/build.js chrome",
+    "watch-chrome": "nodemon --config nodemon.config.json scripts/build.js chrome"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/Troppydash/simplified-io/issues"
   },
-  "homepage": "https://github.com/Troppydash/simplified-io#readme"
+  "homepage": "https://github.com/Troppydash/simplified-io#readme",
+  "dependencies": {
+    "fs-extra": "^10.0.1",
+    "nodemon": "^2.0.15"
+  }
 }
