--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "dependencies": {
     "fs-extra": "^10.0.1",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "web-ext": "^6.7.0"
   }
 }
